tests/snapshots/run_wpt_conformance__coreml_reduceSumSquare_float32_3D_tensor_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum_square.https.any.js reduceSumSquare float32 3D tensor options.keepDimensions=true, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceSumSquareInput' must be of rank 4, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumSquareInput: f32[2, 3, 4];
  }

  nodes {
    [reduceSumSquareOutput] = reduceSumSquare(reduceSumSquareInput, axes=null, keepDimensions=true, label="");
  }

  outputs { reduceSumSquareOutput; }
}
