tests/snapshots/run_wpt_conformance__coreml_reduceSum_float16_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum.https.any.js reduceSum float16 0D constant tensor empty axes, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: Feature reduceSumInput is required but not specified.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[] @bytes([90, 84]);
  }

  nodes {
    [reduceSumOutput] = reduceSum(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceSumOutput; }
}
