tests/snapshots/run_wpt_conformance__coreml_reduceSum_float16_3D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum.https.any.js reduceSum float16 3D tensor options.keepDimensions=false, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceSumInput' must be of rank 4, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumInput: f16[2, 3, 4];
  }

  nodes {
    [reduceSumOutput] = reduceSum(reduceSumInput, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceSumOutput; }
}
